@@ -2728,6 +2728,14 @@ class LMS
 
         $message = preg_replace("/\r/", "", $message);
 
+        $message = str_replace(
+            array('%body'),
+            array($message),
+            isset($sms_options['message_template'])
+                ? $sms_options['message_template']
+                : ConfigHelper::getConfig('sms.message_template', '%body')
+        );
+
         $transliterate_message = isset($sms_options['transliterate_message']) ? $sms_options['transliterate_message']
             : ConfigHelper::getConfig('sms.transliterate_message', 'false');
         if (ConfigHelper::checkValue($transliterate_message)) {
